--- a/src/SigSpec.CodeGeneration/SigSpec.CodeGeneration.csproj
+++ b/src/SigSpec.CodeGeneration/SigSpec.CodeGeneration.csproj
@@ -6,7 +6,7 @@
     <Owners>Rico Suter</Owners>
     <Authors>Rico Suter</Authors>
     <Description>Specification and code generator for SignalR Core.</Description>
-    <Version>0.3.2</Version>
+    <Version>0.4.0-preview001</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/RicoSuter/SigSpec</PackageProjectUrl>
     <RepositoryUrl>https://github.com/RicoSuter/SigSpec.git</RepositoryUrl>
@@ -14,7 +14,7 @@
     <PackageTags>SignalR Specification CodeGeneration</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NJsonSchema.CodeGeneration" Version="10.7.1" />
+    <PackageReference Include="NJsonSchema.CodeGeneration" Version="11.0.0-preview008" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SigSpec.Core\SigSpec.Core.csproj" />
