--- a/src/SigSpec.Core/SigSpec.Core.csproj
+++ b/src/SigSpec.Core/SigSpec.Core.csproj
@@ -6,7 +6,7 @@
     <Owners>Rico Suter</Owners>
     <Authors>Rico Suter</Authors>
     <Description>Specification and code generator for SignalR Core.</Description>
-    <Version>0.4.0-preview001</Version>
+    <Version>0.4.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/RicoSuter/SigSpec</PackageProjectUrl>
     <RepositoryUrl>https://github.com/RicoSuter/SigSpec.git</RepositoryUrl>
@@ -14,9 +14,9 @@
     <PackageTags>SignalR Specification CodeGeneration</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NJsonSchema" Version="11.0.0-preview008" />
+    <PackageReference Include="NJsonSchema" Version="11.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
-    <PackageReference Include="NJsonSchema.NewtonsoftJson" Version="11.0.0-preview008" />
+    <PackageReference Include="NJsonSchema.NewtonsoftJson" Version="11.0.0" />
   </ItemGroup>
 </Project>
